# thingz

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
config/: default.toml
src/commands/: mod.rs
src/config/: mod.rs
