[package]
name = "thingz"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mongrov/thingz"
repository = "https://github.com/mongrov/thingz"
keywords = ["mqtt", "thingz", "client", "edge", "cloud"]
description = "cli for thingz cloud"

[dependencies]
log = "0.4"
env_logger = "0.10"
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
file-rotate = "0.7.5"
chrono = "0.4.26"
# mqtt
rumqttc = "0.22"
# archive to s3 compatible 
opendal = "0.39"
# cron job scheduler
tokio-cron-scheduler = "0.9"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
strip = "debuginfo"
